--- a/numbers-intersection-SDA5/numbers-intersection-SDA5.vcxproj
+++ b/numbers-intersection-SDA5/numbers-intersection-SDA5.vcxproj
@@ -81,6 +81,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Hash.h" />
     <ClInclude Include="HelperFunctions.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
