--- a/numbers-intersection-SDA5/numbers-intersection-SDA5.vcxproj.filters
+++ b/numbers-intersection-SDA5/numbers-intersection-SDA5.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="HelperFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Hash.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
