--- a/numbers-intersection-SDA5/numbers-intersection-SDA5.vcxproj
+++ b/numbers-intersection-SDA5/numbers-intersection-SDA5.vcxproj
@@ -83,10 +83,12 @@
   <ItemGroup>
     <ClInclude Include="Hash.h" />
     <ClInclude Include="HelperFunctions.h" />
+    <ClInclude Include="LinearProbingHash.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="LinearProbingHash.cpp" />
     <ClCompile Include="numbers-intersection-SDA5.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
