--- a/numbers-intersection-SDA5/numbers-intersection-SDA5.vcxproj.filters
+++ b/numbers-intersection-SDA5/numbers-intersection-SDA5.vcxproj.filters
@@ -30,12 +30,18 @@
     <ClInclude Include="Hash.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LinearProbingHash.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="numbers-intersection-SDA5.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LinearProbingHash.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
