--- a/numbers-intersection-SDA5/numbers-intersection-SDA5.vcxproj
+++ b/numbers-intersection-SDA5/numbers-intersection-SDA5.vcxproj
@@ -81,14 +81,13 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Hash.h" />
     <ClInclude Include="HelperFunctions.h" />
-    <ClInclude Include="LinearProbingHash.h" />
+    <ClInclude Include="Hash.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="LinearProbingHash.cpp" />
+    <ClCompile Include="Hash.cpp" />
     <ClCompile Include="numbers-intersection-SDA5.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
