--- a/numbers-intersection-SDA5/numbers-intersection-SDA5.vcxproj.filters
+++ b/numbers-intersection-SDA5/numbers-intersection-SDA5.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClInclude Include="Hash.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="LinearProbingHash.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -41,7 +38,7 @@
     <ClCompile Include="numbers-intersection-SDA5.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LinearProbingHash.cpp">
+    <ClCompile Include="Hash.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
